// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component renders the accessories menu with all links/advertisements present 1`] = `
.c0 {
  background-color: white;
  box-shadow: 0 5px 5px 0 rgb(0 0 0 / 20%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  left: 50%;
  max-width: 1100px;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 96%;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 30px;
}

.c2 {
  border-bottom: 1px solid var(--color-orange-1);
  color: var(--color-orange-1);
  font-size: 1.03rem;
  margin-bottom: 10px;
  padding-bottom: 7px;
}

.c3 {
  list-style: none;
}

.c3 li {
  padding-bottom: 7px;
}

.c4 {
  color: var(--color-grey-2);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  color: var(--color-grey-5);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  background-color: var(--color-grey-6);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 25px;
  row-gap: 15px;
}

.c5 img {
  border-radius: 8px;
  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 40%);
}

@media screen and (max-width:924px) {
  .c5 {
    display: none;
  }
}

<div
  className="c0"
  data-testid="dropdown-menu"
  id="Accessories"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      Keyboards
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href=""
        >
          Wired Keyboards
        </a>
      </li>
      <li>
        <a
          className="c4"
          href=""
        >
          Wireless Keyboards
        </a>
      </li>
      <li>
        <a
          className="c4"
          href=""
        >
          Gaming Keyboards
        </a>
      </li>
    </ul>
    <h4
      className="c2"
    >
      Mice
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href=""
        >
          Wired Mice
        </a>
      </li>
      <li>
        <a
          className="c4"
          href=""
        >
          Wireless Mice
        </a>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      Audio
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href=""
        >
          Microphones
        </a>
      </li>
      <li>
        <a
          className="c4"
          href=""
        >
          Speakers
        </a>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      Monitors
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href=""
        >
          Gaming Monitors
        </a>
      </li>
      <li>
        <a
          className="c4"
          href=""
        >
          Ultrawide Monitors
        </a>
      </li>
      <li>
        <a
          className="c4"
          href=""
        >
          OLED Monitors
        </a>
      </li>
    </ul>
  </div>
  <div
    className="c5"
  >
    <img
      alt=""
      data-nimg="future"
      decoding="async"
      height={24}
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
      srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
      style={
        {
          "color": "transparent",
        }
      }
      width={24}
    />
    <img
      alt=""
      data-nimg="future"
      decoding="async"
      height={24}
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
      srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
      style={
        {
          "color": "transparent",
        }
      }
      width={24}
    />
  </div>
</div>
`;

exports[`Dropdown component renders the components menu with all links/advertisements present 1`] = `
.c0 {
  background-color: white;
  box-shadow: 0 5px 5px 0 rgb(0 0 0 / 20%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  left: 50%;
  max-width: 1100px;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 96%;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 30px;
}

.c2 {
  border-bottom: 1px solid var(--color-orange-1);
  color: var(--color-orange-1);
  font-size: 1.03rem;
  margin-bottom: 10px;
  padding-bottom: 7px;
}

.c3 {
  list-style: none;
}

.c3 li {
  padding-bottom: 7px;
}

.c4 {
  color: var(--color-grey-2);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  color: var(--color-grey-5);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  background-color: var(--color-grey-6);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 25px;
  row-gap: 15px;
}

.c5 img {
  border-radius: 8px;
  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 40%);
}

@media screen and (max-width:924px) {
  .c5 {
    display: none;
  }
}

<div
  className="c0"
  data-testid="dropdown-menu"
  id="Components"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      Processors
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href="/shop/components/processors/amd"
        >
          AMD
        </a>
      </li>
      <li>
        <a
          className="c4"
          href="/shop/components/processors/intel"
        >
          Intel
        </a>
      </li>
    </ul>
    <h4
      className="c2"
    >
      Memory
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href="/shop/components/memory/ddr5"
        >
          DDR5
        </a>
      </li>
      <li>
        <a
          className="c4"
          href="/shop/components/memory/ddr4"
        >
          DDR4
        </a>
      </li>
    </ul>
    <h4
      className="c2"
    >
      Motherboards
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href="/shop/components/motherboards/amd"
        >
          AMD Motherboards
        </a>
      </li>
      <li>
        <a
          className="c4"
          href="/shop/components/motherboards/intel"
        >
          Intel Motherboards
        </a>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      Graphics Cards
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href="/shop/components/graphics-cards/nvidia"
        >
          NVIDIA Graphics Cards
        </a>
      </li>
      <li>
        <a
          className="c4"
          href="/shop/components/graphics-cards/amd"
        >
          AMD Graphics Cards
        </a>
      </li>
    </ul>
    <h4
      className="c2"
    >
      Power Supplies
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href="/shop/components/power-supplies/wired"
        >
          Fully Wired
        </a>
      </li>
      <li>
        <a
          className="c4"
          href="/shop/components/power-supplies/modular"
        >
          Fully Modular
        </a>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      Cases
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href="/shop/components/cases/full-tower"
        >
          Full Tower
        </a>
      </li>
      <li>
        <a
          className="c4"
          href="/shop/components/cases/midi-tower"
        >
          Midi Tower
        </a>
      </li>
      <li>
        <a
          className="c4"
          href="/shop/components/cases/itx"
        >
          ITX
        </a>
      </li>
    </ul>
    <h4
      className="c2"
    >
      Storage
    </h4>
    <ul
      className="c3"
    >
      <li>
        <a
          className="c4"
          href="/shop/components/storage/solid-state-drives"
        >
          Solid State Drives
        </a>
      </li>
    </ul>
  </div>
  <div
    className="c5"
  >
    <img
      alt=""
      data-nimg="future"
      decoding="async"
      height={24}
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
      srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
      style={
        {
          "color": "transparent",
        }
      }
      width={24}
    />
    <img
      alt=""
      data-nimg="future"
      decoding="async"
      height={24}
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
      srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
      style={
        {
          "color": "transparent",
        }
      }
      width={24}
    />
    <img
      alt=""
      data-nimg="future"
      decoding="async"
      height={24}
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
      srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
      style={
        {
          "color": "transparent",
        }
      }
      width={24}
    />
  </div>
</div>
`;
